samples/_failures_safe/1761093271_34915c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b795634.c: In function ‘main’:
./samples/SAFE/__tmp_9b795634.c:157:5: error: expected declaration or statement at end of input
  157 |     printf("Enter text to analyze (max %d characters):\n", MAX_TEXT_LEN - 1);
      |     ^~~~~~
